package com.collectpro.backend.enums;

public enum CollecteStatus {
    DRAFT,
    PENDING_SYNC,
    SYNCING,
    SYNCED,
    PENDING_VALIDATION,
    VALIDATED,
    REJECTED,
    ERROR
}