package com.collectpro.backend.enums;

public enum FormStatus {
    DRAFT,
    PUBLISHED,
    ARCHIVED
}