package com.collectpro.backend.enums;

public enum OrganizationStatus {
    ACTIVE,
    INACTIVE
}