package com.collectpro.backend.enums;

public enum ValidationDecision {
    VALIDEE,
    REJETEE
}